--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -272,6 +272,7 @@
             </div>
           </div>
         </div>
+
       </section>
       <!--end section usp-->
 
@@ -285,7 +286,9 @@
             </div>
           </div>
         </div>
-        <img data-aos="fade-up" data-aos-duration="800" data-aos-delay="500" class="img-showcase" src="img/img-showcase.png" alt="">
+        <div class="m-hide"><img data-aos="fade-up" data-aos-duration="500" data-aos-delay="300" class="img-showcase" src="img/img-showcase.png" alt=""></div>
+        <div class="m-show"><img data-aos="fade-up" data-aos-duration="500" data-aos-delay="300" class="img-showcase" src="img/img-showcase-fix-sm.png" alt=""></div>
+      
       </section>
       <!--end section showcase-->
       
