optimized for mobile view section showcase

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -87,6 +87,7 @@
         <div class="content align-ltc">
           <h2 class="section-title">Discover Jobs</h1>
         <p>Find the most popular jobs in the Urbanhire universe</p>
+        <p><a href="#" class="btn">Go to Job Search <i class="icon-angle-right"></i></a></p>
         </div>
       </div>
       <div class="col-lg-7 col-xs-12 align-ltc">
@@ -443,7 +444,7 @@
     <footer class="site-footer">
   <div class="top-footer">
     <div class="container">
-      <div class="row">
+      <div class="row center-xs">
         <div class="col-lg-4 col-md-12">
           <div class="content">
             <img src="img/logo.svg" alt="">
@@ -500,6 +501,11 @@
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">FAQ</a></li>
                     <li><a href="#">Help</a></li>
+                    <li class="contact-info text-s">
+                      <p>Contact Sales: 9am - 7pm</p>
+                      <p><i class="icon-phone"></i> +62 (21) 2751 8857</p>
+                      <p><i class="icon-mail"></i> support@urbanhire.com</p>
+                    </li>
                   </ul>
                   <br>
                   <h4>FOLLOW US</h4>
