--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -13,7 +13,7 @@
     <!-- Favicon-->
     <link rel="icon" type="image/png" href="img/favicon.png">
   </head>
-  <body>
+  <body class="disabled">
     <img class="u-bg" src="img/background-u.svg" alt="">
     <!--start header-->
     <header class="site-header">
@@ -541,6 +541,28 @@
 </footer>
 <!--end footer-->
 <div class="menu-overlay"></div>
+
+<!--start modal-->
+<div class="modal is-active">
+  <div class="outer">
+    <div class="middle">
+      <div class="inner">
+        <div class="modal-container">
+          <div class="modal-box align-center">
+            <h2>Urbanhire Job Search has a new URL !</h2>
+            <img src="img/img-interview.svg" alt="">
+            <div class="align-center">
+              <a href="#" class="btn btn-1 is-lg close-modal">Stay on this page</a> &nbsp;
+              <a href="#" class="btn btn-2 is-lg">Go to Job Search</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="overlay is-active"></div>
+<!--end modal-->
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
