update close modal

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -543,7 +543,7 @@
 <div class="menu-overlay"></div>
 
 <!--start modal-->
-<div class="modal is-active">
+<div data-aos="zoom-in" data-aos-delay="50" class="modal is-active">
   <div class="outer">
     <div class="middle">
       <div class="inner">
@@ -552,9 +552,10 @@
             <h2>Urbanhire Job Search has a new URL !</h2>
             <img src="img/img-interview.svg" alt="">
             <div class="align-center">
-              <a href="#" class="btn btn-1 is-lg close-modal">Stay on this page</a> &nbsp;
+              <a href="#" class="btn btn-1 is-lg fn-close-modal">Stay on this page</a> &nbsp;
               <a href="#" class="btn btn-2 is-lg">Go to Job Search</a>
             </div>
+            <span class="modal-close fn-close-modal"><i class="icon-close"></i></span>
           </div>
         </div>
       </div>
