update button text

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -64,7 +64,7 @@
                     <p data-aos="fade-up" data-aos-delay="300">Urbanhire makes hiring simple and effective. Our cloud solution is a collaborative platform empowering applicant-tracking and resume search by multiple users.</p>
                     <div data-aos="fade-up" data-aos-delay="400">
                       <a href="#" class="btn is-lg m-r btn-1">Post a Job <i class="icon-published-job"></i></a>
-                      <a href="#" class="btn is-lg btn-3">Job Search <i class="icon-search"></i></a>
+                      <a href="#" class="btn is-lg btn-3">Search Job<i class="icon-search"></i></a>
                     </div>
                   </div>
                   <div class="col-lg-6 col-md-5 img-hero-wrapper">
