--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -41,9 +41,9 @@
               </ul>
                     </li>
                     <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Customers</a></li>
                     <li><a href="#">Partners</a></li>
-                     <li><a href="#">Jobs Search</a></li>
+                    <li><a href="#">Resources</a></li>
+                     <li><a href="#">Search Jobs</a></li>
                      <li><a href="contact.html">Log In</a></li>
                      <li><a class="btn btn-6" href="#">Try for Free</a></li>
                 </ul>
