update page pricing

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" href="img/favicon.png">
   </head>
   <body class="disabled">
-    <img class="u-bg" src="img/background-u.svg" alt="">
+    <img class="bg-u" src="img/background-u.svg" alt="">
     <!--start header-->
     <header class="site-header">
       <div class="container-fluid">
@@ -40,7 +40,7 @@
                     <li><a href="#">Resume Search</a></li>
               </ul>
                     </li>
-                    <li><a href="#">Pricing</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="#">Partners</a></li>
                     <li><a href="#">Resources</a></li>
                      <li><a href="#">Search Jobs</a></li>
