--- a/landing-page/pricing.html
+++ b/landing-page/pricing.html
@@ -13,7 +13,7 @@
     <!-- Favicon-->
     <link rel="icon" type="image/png" href="img/favicon.png">
   </head>
-  <body>
+  <body class="bg-circles">
     <!--start header-->
     <header class="site-header">
       <div class="container-fluid">
@@ -53,20 +53,31 @@
 
 <!--start main-->
   <main>
-    <section class="section-pricing outline">
-       <div class="outer outline">
-          <div class="middle outline">
-            <div class="inner outline">
-              <div class="container outline">
-
-                <h1 class="main-title outline">Affordable, Simple Pricing</h1>
-                <h3 class="sub-title outline">Urbanhire makes it really easy. Try all our premium features for 15 days.</h4>
-                <a href="#" class="btn free-trial-red">Free Trial</a>
-
-                <div class="row">
+    <img class="bg-pricing" src="img/img-backgroundcity.svg" alt="">
+    <section class="section-pricing-hero">
+      <div class="outer">
+        <div class="middle">
+          <div class="inner">
+            <div class="container">
+              <div class="content align-center">
+                <h1 class="main-title">Affordable, Simple Pricing</h1>
+                <h2 class="sub-title">Urbanhire makes it really easy. Try all our premium features for 15 days.</h2>
+                <a href="#" class="btn btn-trial is-lg m-t">Free Trial</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-pricing-cards">
+       <div class="container">
+                <div class="row price-card-wrapper">
                   <div class="col-md-3">
-                    <div class="price-card outline">
+                    <div class="price-card align-center">
                       <h3>Standard</h3>
+                      <div class="price-card-img m-b">
+                        <img src="img/img-standard.svg" alt="">
+                      </div>
                       <a href="#" class="btn free-trial-outline">15 Days Trial</a>
                       <ul class="pc-list" style="list-style-type: none;">
                         <li>3 Active Jobs Opening</li>
@@ -77,20 +88,24 @@
                   </div>
 
                 <div class="col-md-3">
-                  <div class="price-card outline">
+                  <div class="price-card fav align-center">
                     <h3>Professional</h3>
+                    <div class="price-card-img m-b">
+                      <img src="img/img-professional.svg" alt="">
+                    </div>
                     <a href="#" class="btn free-trial-outline">15 Days Trial</a>
                     <ul class="pc-list" style="list-style-type: none;">
-                      <li>3 Active Jobs Opening</li>
-                      <li>3 Active User Accounts</li>
                       <li>500 Applicant per Position</li>
                     </ul>
                   </div>
                 </div>
 
                 <div class="col-md-3">
-                  <div class="price-card outline">
+                  <div class="price-card align-center">
                     <h3>Growth</h3>
+                    <div class="price-card-img m-b">
+                      <img src="img/img-growth.svg" alt="">
+                    </div>
                     <a href="#" class="btn free-trial-outline">15 Days Trial</a>
                     <ul class="pc-list" style="list-style-type: none;">
                       <li>3 Active Jobs Opening</li>
@@ -101,8 +116,12 @@
                 </div>
 
                 <div class="col-md-3">
-                  <div class="price-card outline">
+                  <div class="price-card align-center">
                     <h3>Enterprise</h3>
+                    <div class="price-card-img m-b">
+                      <img src="img/img-enterprise.png" alt="">
+                    </div>
+                    
                     <a href="#" class="btn free-trial-outline">15 Days Trial</a>
                     <ul class="pc-list" style="list-style-type: none;">
                       <li>3 Active Jobs Opening</li>
@@ -114,10 +133,6 @@
 
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
 
     <section class="section-plan">
