--- a/landing-page/pricing.html
+++ b/landing-page/pricing.html
@@ -119,7 +119,7 @@
                   <div class="price-card align-center">
                     <h3>Enterprise</h3>
                     <div class="price-card-img m-b">
-                      <img src="img/img-enterprise.png" alt="">
+                      <img src="img/img-enterprise.svg" alt="">
                     </div>
                     
                     <a href="#" class="btn free-trial-outline">15 Days Trial</a>
