finalize price cards at pricing page

--- a/landing-page/pricing.html
+++ b/landing-page/pricing.html
@@ -62,7 +62,7 @@
               <div class="content align-center">
                 <h1 class="main-title">Affordable, Simple Pricing</h1>
                 <h2 class="sub-title">Urbanhire makes it really easy. Try all our premium features for 15 days.</h2>
-                <a href="#" class="btn btn-trial is-lg m-t">Free Trial</a>
+                <a href="#" class="btn btn-9 is-lg m-t">Try for Free</a>
               </div>
             </div>
           </div>
@@ -72,13 +72,19 @@
     <section class="section-pricing-cards">
        <div class="container">
                 <div class="row price-card-wrapper">
-                  <div class="col-md-3">
+                  <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="price-card align-center">
                       <h3>Standard</h3>
-                      <div class="price-card-img m-b">
+                      <div class="price-card-img">
                         <img src="img/img-standard.svg" alt="">
                       </div>
-                      <a href="#" class="btn free-trial-outline">15 Days Trial</a>
+                      <div class="the-price is-shown m-b">
+                        <p>
+                          399<sup> .000</sup>
+                          <sub>/ Month</sub>
+                        </p>
+                      </div>
+                      <a href="#" class="btn btn-2 is-lg">15 Days Trial</a>
                       <ul class="pc-list" style="list-style-type: none;">
                         <li>3 Active Jobs Opening</li>
                         <li>3 Active User Accounts</li>
@@ -87,26 +93,38 @@
                     </div>
                   </div>
 
-                <div class="col-md-3">
-                  <div class="price-card fav align-center">
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                  <div class="price-card align-center">
                     <h3>Professional</h3>
-                    <div class="price-card-img m-b">
+                    <div class="price-card-img">
                       <img src="img/img-professional.svg" alt="">
                     </div>
-                    <a href="#" class="btn free-trial-outline">15 Days Trial</a>
+                    <div class="the-price m-b">
+                        <p>
+                          Best option for hiring at medium size companies.
+                        </p>
+                      </div>
+                    <a href="#" class="btn btn-2-stroke is-lg">Talk to Us!</a>
                     <ul class="pc-list" style="list-style-type: none;">
                       <li>500 Applicant per Position</li>
+                      <li>7 Active User Accounts</li>
+                      <li>1000 Applicant per Position</li>
                     </ul>
                   </div>
                 </div>
 
-                <div class="col-md-3">
-                  <div class="price-card align-center">
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                  <div class="price-card is-fav align-center">
                     <h3>Growth</h3>
-                    <div class="price-card-img m-b">
+                    <div class="price-card-img">
                       <img src="img/img-growth.svg" alt="">
                     </div>
-                    <a href="#" class="btn free-trial-outline">15 Days Trial</a>
+                    <div class="the-price m-b">
+                        <p>
+                          A productivity-boosting platform for high-growth teams.
+                        </p>
+                      </div>
+                    <a href="#" class="btn btn-2-stroke is-lg">Talk to Us!</a>
                     <ul class="pc-list" style="list-style-type: none;">
                       <li>3 Active Jobs Opening</li>
                       <li>3 Active User Accounts</li>
@@ -115,14 +133,18 @@
                   </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                   <div class="price-card align-center">
                     <h3>Enterprise</h3>
-                    <div class="price-card-img m-b">
+                    <div class="price-card-img">
                       <img src="img/img-enterprise.svg" alt="">
                     </div>
-                    
-                    <a href="#" class="btn free-trial-outline">15 Days Trial</a>
+                    <div class="the-price m-b">
+                        <p>
+                          The most comprehensive platform for recruiting at scale.
+                        </p>
+                      </div>
+                    <a href="#" class="btn btn-2-stroke is-lg">Talk to Us!</a>
                     <ul class="pc-list" style="list-style-type: none;">
                       <li>3 Active Jobs Opening</li>
                       <li>3 Active User Accounts</li>
