update menu - footer -etc

--- a/landing-page/index_backup_with_new_menu.html
+++ b/landing-page/index_backup_with_new_menu.html
@@ -46,13 +46,22 @@
                 </div>
                 <ul class="menu">
                   <li><a class="active" href="index.html">Home</a></li>
-                  <li><a href="https://www.urbanhire.com/employers/features">Features</a></li>
-                  <li><a href="pricing.html">Pricing</a></li>
-                  <li><a href="https://www.urbanhire.com/employers/customer">Customers</a></li>
-                  <li><a href="https://resources.urbanhire.com/" target="_blank">Resources</a></li>
-                  <li><a href="https://www.urbanhire.com/">Search Job</a></li>
-                  <li><a href="https://pro.urbanhire.com/signin/">Log In</a></li>
-                  <li><a class="btn btn-6" href="https://pro.urbanhire.com/signup">Try for Free</a></li>
+                    <li class="has-children">
+                      <a>Products</a>
+              <ul>
+                <li><a href="#">Recruitment Platform</a></li>
+                    <li><a href="#">Online Assessment</a></li>
+                    <li><a href="#">Integration Marketplace</a></li>
+                    <li><a href="#">Referral System</a></li>
+                    <li><a href="#">Resume Search</a></li>
+              </ul>
+                    </li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="#">Partners</a></li>
+                    <li><a href="#">Resources</a></li>
+                     <li><a href="#">Search Jobs</a></li>
+                     <li><a href="contact.html">Log In</a></li>
+                     <li><a class="btn btn-6" href="#">Try for Free</a></li>
                 </ul>
             </nav>
       </div>
@@ -556,12 +565,11 @@
       <div class="inner">
         <div class="modal-container">
           <div class="modal-box align-center">
-            <h2>Urbanhire is changing, for a better!</h2>
+            <h2>Urbanhire Job Search has a new URL !</h2>
             <img src="img/img-interview.svg" alt="">
-            <p>We moved our current Job portal website to new a <a class="link" target="_blank" href="https://www.urbanhire.com/">link</a>.</p>
             <div class="align-center">
-              <a href="#" class="btn btn-1 is-lg fn-close-modal m-b">Stay on this page</a> &nbsp;
-              <a href="#" class="btn btn-2 is-lg">Go to Search Job</a>
+              <a href="#" class="btn btn-1 is-lg fn-close-modal">Stay on this page</a> &nbsp;
+              <a href="#" class="btn btn-2 is-lg">Go to Job Search</a>
             </div>
             <span class="modal-close fn-close-modal"><i class="icon-close"></i></span>
           </div>
