add IDR at pricing page

--- a/landing-page/pricing.html
+++ b/landing-page/pricing.html
@@ -73,7 +73,7 @@
                       </div>
                       <div class="the-price is-shown m-b">
                         <p>
-                          399<sup> .000</sup>
+                          399<sup> .000 IDR</sup>
                           <sub>/ Month</sub>
                         </p>
                       </div>
