--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -57,7 +57,7 @@
                     <p data-aos="fade-up" data-aos-delay="300">Urbanhire makes hiring simple and effective. Our cloud solution is a collaborative platform empowering applicant-tracking and resume search by multiple users.</p>
                     <div data-aos="fade-up" data-aos-delay="400">
                       <a href="#" class="btn is-lg m-r btn-1">Post a Job <i class="icon-published-job"></i></a>
-                      <a href="#" class="btn is-lg btn-3">Search Job<i class="icon-search"></i></a>
+                      <a href="#" class="btn is-lg btn-3">Search Job <i class="icon-search"></i></a>
                     </div>
                   </div>
                   <div class="col-lg-6 col-md-5 img-hero-wrapper">
@@ -80,7 +80,7 @@
         <div class="content align-ltc">
           <h2 class="section-title">Discover Jobs</h1>
         <p>Find the most popular jobs in the Urbanhire universe</p>
-        <p><a href="#" class="btn">Go to Job Search <i class="icon-angle-right"></i></a></p>
+        <p><a href="#" class="btn btn-3">Go to Job Search <i class="icon-angle-right"></i></a></p>
         </div>
       </div>
       <div class="col-lg-7 col-xs-12 align-ltc">
@@ -199,12 +199,13 @@
             </div>
             <div class="col-lg-7 col-md-8">
               <div class="content">
-                <h2 class="content-title m-b">Attract and discover quality talents with ease</h2>
+                <h2 class="content-title m-b">Source candidates effectively</h2>
                   <ul class="list-usp">
-                      <li>Distributes job to 15+ channels at no extra cost</li>
-                      <li>Access to Premium job boards channels</li>
-                      <li>Get more relevant candidates with Pre Assessment questions</li>
-                      <li>Search >150,000 active jobseeker resume & profiles</li>
+                      <li>Distribute your jobs to more than 50 distribution channels</li>
+                      <li>Find the most suitable candidate in more than 1 million active jobseekers profile</li>
+                      <li>Share your jobs through social media</li>
+                      <li>Attract talent through Employer Branded Career Page</li>
+                      <li>Source through Employee Referral Program</li>
                     </ul>
                 </div>
             </div>
@@ -218,12 +219,13 @@
             </div>
             <div class="col-lg-7 col-md-8">
               <div class="content">
-                      <h2 class="content-title m-b">Track and manage your candidates all in one platform</h2>
+                      <h2 class="content-title m-b">Speed up Recruitment process</h2>
                       <ul class="list-usp">
-                        <li>Communicate with Candidates in the Platform</li>
-                        <li>Send email notifications to the whole batch in one go</li>
-                        <li>Set hiring plan to suit your recruitment process...</li>
-                        <li>...and get an overview of your recruitment progress</li>
+                        <li>Filter out irrelevant candidates with Pre-Assessment Questions</li>
+                        <li>Save time with video interview feature</li>
+                        <li>Profile your candidate efficiently with online Psychometric assessment</li>
+                        <li>Manage communications with your Candidate and your hiring team in one platform</li>
+                        <li>Make informed hiring decisions with well-documented hiring team feedback</li>
                       </ul>
                     </div>
             </div>
@@ -231,38 +233,21 @@
           <div class="row middle-lg center-xs padd-lg-tb">
             <div class="col-lg-5 col-md-4 last-md">
               <div class="content">
-                <img data-aos="fade-up" src="img/img-build.svg" alt="">
-              </div>
-            </div>
-            <div class="col-lg-7 col-md-8">
-              <div class="content">
-                <h2 class="content-title m-b">Build your team, with the team</h2>
-                  <ul class="list-usp">
-                      <li>Recruitment is strategic, build your team together</li>
-                      <li>Simply @mention for feedback, all feedback will be recorded on timeline</li>
-                      <li>Assign jobs to only specific members</li>
-                      <li>Gather feedback from people external to your hiring team</li>
-                    </ul>
-                </div>
-            </div>
-            
-          </div>
-          <div class="row middle-lg center-xs padd-lg-tb">
-            <div class="col-lg-5 col-md-4">
-              <div class="content">
                 <img data-aos="fade-up" src="img/img-data.svg" alt="">
               </div>
             </div>
             <div class="col-lg-7 col-md-8">
               <div class="content">
-                <h2 class="content-title m-b">Develop data-driven recruitment strategy</h2>
+                <h2 class="content-title m-b">Data-driven Hiring Strategy</h2>
                   <ul class="list-usp">
-                    <li>Overview of your recruitment performance</li>
-                    <li>Quickly identify your most optimal sourcing channels</li>
-                    <li>Downloadable report and analytics</li>
+                    <li>Have quick overview of your hiring current status</li>
+                    <li>Recap your applicants details with a click of a button</li>
+                    <li>Generate report of hiring performance</li>
+                    <li>Analytics insight on how your hiring team is performing</li>
                   </ul>
                 </div>
             </div>
+            
           </div>
         </div>
 
