--- a/landing-page/pricing.html
+++ b/landing-page/pricing.html
@@ -192,10 +192,10 @@
           </div>
           <div class="col-xs-6 col-md-5 feature-plans">
             <div class="row">
-              <div class="col-xs-3">Standard</div>
-              <div class="col-xs-3">Professional</div>
-              <div class="col-xs-3">Growth</div>
-              <div class="col-xs-3">Enterprise</div>
+              <div class="col-xs-3"><span>Standard</span></div>
+              <div class="col-xs-3"><span>Professional</span></div>
+              <div class="col-xs-3"><span>Growth</span></div>
+              <div class="col-xs-3"><span>Enterprise</span></div>
             </div>
           </div>
         </div>
@@ -513,7 +513,7 @@
         <div class="row feature-list">
           <div class="col-xs-6 col-md-7">
             <div class="content">
-              Video Interview
+              Video Interview <sup><span class="tooltip-right" data-tooltip="Using 3 UH coins per candidate invitation."><i class="icon-info"></i></span></sup>
             </div>
           </div>
           <div class="col-xs-6 col-md-5">
@@ -544,7 +544,7 @@
         <div class="row feature-list">
           <div class="col-xs-6 col-md-7">
             <div class="content">
-              Psychometric Assesment
+              Psychometric Assesment <sup><span class="tooltip-right" data-tooltip="Using 120 UH coins per candidate invitation."><i class="icon-info"></i></span></sup>
             </div>
           </div>
           <div class="col-xs-6 col-md-5">
@@ -637,7 +637,7 @@
         <div class="row feature-list">
           <div class="col-xs-6 col-md-7">
             <div class="content">
-              Resume Search
+              Resume Search <sup><span class="tooltip-right" data-tooltip="Using 6 UH coins per profile."><i class="icon-info"></i></span></sup>
             </div>
           </div>
           <div class="col-xs-6 col-md-5">
@@ -699,7 +699,7 @@
         <div class="row feature-list">
           <div class="col-xs-6 col-md-7">
             <div class="content">
-              UH Coins
+              UH Coins <sup><span class="tooltip-right" data-tooltip="For video interview, assesment & resume search."><i class="icon-info"></i></span></sup>
             </div>
           </div>
           <div class="col-xs-6 col-md-5">
@@ -920,12 +920,12 @@
               </div>
               <div class="col-xs-3">
                <div class="content-v align-center">
-                  1 Credit
+                  1 Credit <sup><span class="tooltip-left" data-tooltip="Applies to annual subscriptions."><i class="icon-info"></i></span></sup>
                 </div>
               </div>
               <div class="col-xs-3">
                 <div class="content-v align-center">
-                  3 Credits
+                  3 Credits <sup><span class="tooltip-left" data-tooltip="Applies to annual subscriptions."><i class="icon-info"></i></span></sup>
                 </div>
               </div>
             </div>
